made a few changes in controllers and middlewares and installed some devdependencies
