# bookwishlist-backend/controllers/userController.js
@@ -2,9 +2,8 @@ const asyncHandler = require("express-async-handler");
 const bcrypt = require("bcrypt");
 const jwt = require("jsonwebtoken");
 const User = require("../models/userModel");
-const responseHandler = require("../middleware/responseHandler");
 
-// Register User
+// REGISTER USER
 const registerUser = asyncHandler(async (req, res, next) => {
     const {username, email, password, preferredGenre} = req.body;
     
@@ -18,7 +17,7 @@ const registerUser = asyncHandler(async (req, res, next) => {
         return next();
     }
 
-    // Already registered user - email already taken
+    // Already registered user - email already registered
     const userAvailable = await User.findOne({email});
     if (userAvailable){
         req.response = {
@@ -38,20 +37,10 @@ const registerUser = asyncHandler(async (req, res, next) => {
             data: {}
         };
         return next();
-        // res.status(409);
-        // throw new Error("Username already taken");
     }
-
-    // // Check if the preferredGenre is one of the existing values // redununt code
-    // const allowedGenres = ['Fiction', 'Non-Fiction', 'Comic', 'Horror'];
-    // if (!allowedGenres.includes(preferredGenre)) {
-    //     res.status(400);
-    //     throw new Error("Invalid preferred genre. \n Please choose from 'Fiction', 'Non-Fiction', 'Comic', 'Horror'.");
-    // }
 
     // Hash Password 
     const hashedPassword = await bcrypt.hash(password, 10);
-    // console.log("Hashed Password: ", hashedPassword);
     
     // Register user 
     const user = await User.create({
@@ -69,29 +58,19 @@ const registerUser = asyncHandler(async (req, res, next) => {
             data: {_id: user.id, email: user.email}
         };
         return next();
-        // res.status(201).json({_id: user.id, email: user.email});
     }else{
-        // ????????????????????
         req.response = {
             code: 400,
             message: "User data not valid",
             data: {}
         };
         return next();
-        // res.status(400);
-        // throw new Error("User data not valid");
     }
 });
 
-// Login User
+// LOGIN USER
 const loginUser = asyncHandler(async (req, res, next) => {
     const {email, password} = req.body;
-    
-    // // Mandatory fields check 
-    // if(!email || !password){
-    //     res.status(400);
-    //     throw new Error("All fiels are mandatory!");
-    // }
 
     // Mandatory fields check 
     if (!email || !password) {
@@ -123,36 +102,26 @@ const loginUser = asyncHandler(async (req, res, next) => {
             code: 200,
             message: "Login successful",
             data: {
-                accessToken: accessToken,
-                // Other data you want to include in the response
+                accessToken: accessToken
             },
         };
-
-        // Call the response middleware
-        responseHandler(req, res);
-        // res.status(200).json({accessToken}); //old code
     }else{
-        // res.status(401);
-        // throw new Error("invalid creds!");
         req.response = {
             code: 401,
             message: "Invalid credentials",
-            data: {}
         };
     }
-    
     next(); // Move to the next middleware (responseHandler)
 
 });
 
-// Current User Info
+// CURRENT USER INFO
 const currentUser = asyncHandler(async (req, res, next) => {
     req.response = {
         code: 200,
         message: "Current user information",
         data: req.user
     };
-    responseHandler(req, res);
     next();
 });
 
