# bookwishlist-backend/server.js
@@ -1,8 +1,9 @@
 const express = require("express");
-const errorHandler = require("./middleware/errorHandler");
 const connectDb = require("./config/dbConnection");
+const errorHandler = require("./middleware/errorHandler");
+const resHandler = require("./middleware/responseHandler");
 const dotenv = require("dotenv").config();
-const YML = require('yamljs'); // Make sure to install this package using: npm install yamljs
+const YML = require('yamljs'); 
 
 // Swagger Setup
 const swaggerUi = require("swagger-ui-express");
@@ -13,13 +14,14 @@ connectDb();
 const app = express();
 
 //middlewares
+
 app.use(express.json());
-app.use("/api/contacts", require("./routes/wishlistRoutes"));
+app.use("/api/wishlist", require("./routes/wishlistRoutes"));
 app.use("/api/users", require("./routes/userRoutes"));
-app.use(errorHandler)
+app.use(errorHandler);
+app.use(resHandler);
 
-
-// Swagger
+// Swagger 
 const swaggerDocument = YML.load('./swagger.yml'); 
 app.use(
     "/api-docs",
@@ -27,13 +29,11 @@ app.use(
     swaggerUi.setup(swaggerDocument)
 );
 
-// just for testing
-app.get('/', (req, res) => {
-    res.send("welcome to api");
-});
+
 
 const port = process.env.PORT || 5000;
-// const port = 5000;
 app.listen(port, ()=> {
     console.log(`Server running on port ${port}`);
 });
+
+module.exports = app;
